# data_leakage_detect

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  job_launcher.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: MIGRATION.md  README.md  build.sh  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: fimmia.md  shift_detection.md
docs/tutorials/: examples.md  inference.md  training.md
docs/usage/: cli-reference.md  pipeline.md  python-api.md
examples/: Finetune_and_Inference_example.ipynb  Finetune_and_Inference_example_package.ipynb
fimmia/: __init__.py  attribute_fimmia.py  cli.py  embeds_joint.py  embeds_text_calc.py  fimmia.py  fimmia_inference.py  loss_calc.py  modality_perturbation.py  neighbors.py  sft_finetune_image.py  train.py
fimmia/audio/: loss_calc_qwen.py  loss_calc_qwen2.py  train_qwen.py  train_qwen2.py
fimmia/embedding_models/: __init__.py  base.py  imagebind_embedder.py  text_embedder.py
fimmia/fimmia_models/: __init__.py  registry.py  v2.py
fimmia/image/: loss_calc.py
fimmia/utils/: data.py  mds_dataset.py  metrics.py  utils.py
fimmia/video/: loss_calc_llava_next.py  loss_calc_qwen25.py  train_llava_next.py  train_qwen25vl.py  vision_process.py
shift-detection/: README.md  bag_of_audio_feats.py  bag_of_visual_feats.py  bag_of_words.py  data_script_1m_1m.py  data_script_laion_mi.py  run_attack.py  utils.py
shift_detection/: README.md  __init__.py  bag_of_audio_feats.py  bag_of_visual_feats.py  bag_of_words.py  cli.py  data_script_1m_1m.py  data_script_laion_mi.py  date_detection.py  dimensionality.py  greedy_selection.py  joint_text_modality.py  requirements.txt  run_attack.py  utils.py
smia/: attribute_fimmia.py  attribute_smia.py  loss_calc.py  neighbors.py  sft_finetune_image.py  smia.py  smia_inference.py  train.py
smia/audio/: loss_calc_qwen.py  loss_calc_qwen2.py  train_qwen.py  train_qwen2.py
smia/image/: loss_calc.py
smia/smia_models/: __init__.py  registry.py  v2.py
smia/utils/: data.py  mds_dataset.py  metrics.py  utils.py
smia/video/: loss_calc_llava_next.py  (+3 more)
